--- a/36-ansible_ec2_creation.yaml
+++ b/36-ansible_ec2_creation.yaml
@@ -10,3 +10,6 @@
       key_name: KeyForLinuxServer
       region: us-east-1
       wait: yes
+      tags:
+        Environment: web
+        Name: Client5
