start stop ec2 with tagging

--- a/37-ansible_ec2_with_tags.yaml
+++ b/37-ansible_ec2_with_tags.yaml
@@ -34,3 +34,4 @@
 # ansible-playbook playbookName --syntax-check
 # ansible-playbook playbookName
 # ansible-playbook playbookName -t start 
+# ansible-playbook playbookName -t stop
