--- a/38-ansible_ec2_instance_facts.yaml
+++ b/38-ansible_ec2_instance_facts.yaml
@@ -12,39 +12,39 @@
      register: ec2_info
    - name: displaying output
      debug: msg="{{item.instance_id}}"
-     with_items: "{{ec2_info.instances}}"
+     with_items: "{{ec2_info.instances}}"s
     #  tags:
     #    - always
   # - name: displaying output
   #   debug: msg="{{item.instance_id}}"
   #   with_items: "{{ec2_info.instances}}"
-  #  - name: starting ec2 instance
-  #    ec2:
-  #     instance_ids: "{{item.instance_id}}"
-  #     region: us-east-1
-  #     state: running
-  #     wait: yes
-  #    tags:
-  #     - start
-  #     - never
-  #    with_items: "{{ec2_info.instances}}"
-  #  - name: stopping ec2 instance
-  #    ec2:
-  #     instance_ids: "{{item.instance_id}}"
-  #     region: us-east-1
-  #     state: stopped
-  #     wait: yes
-  #    tags:
-  #     - stop
-  #     - never
-  #    with_items: "{{ec2_info.instances}}"
-  #  - name: Terminating ec2 instance
-  #    ec2:
-  #     instance_ids: "{{item.instance_id}}"
-  #     region: us-east-1
-  #     state: absent
-  #     wait: yes
-  #    tags:
-  #     - terminate
-  #     - never
-  #    with_items: "{{ec2_info.instances}}"
+   - name: starting ec2 instance
+     ec2:
+      instance_ids: "{{item.instance_id}}"
+      region: us-east-1
+      state: running
+      wait: yes
+     tags:
+      - start
+      - never
+     with_items: "{{ec2_info.instances}}"
+   - name: stopping ec2 instance
+     ec2:
+      instance_ids: "{{item.instance_id}}"
+      region: us-east-1
+      state: stopped
+      wait: yes
+     tags:
+      - stop
+      - never
+     with_items: "{{ec2_info.instances}}"
+   - name: Terminating ec2 instance
+     ec2:
+      instance_ids: "{{item.instance_id}}"
+      region: us-east-1
+      state: absent
+      wait: yes
+     tags:
+      - terminate
+      - never
+     with_items: "{{ec2_info.instances}}"
