--- a/38-ansible_ec2_instance_facts.yaml
+++ b/38-ansible_ec2_instance_facts.yaml
@@ -10,6 +10,8 @@
       filters:
        "tag:Day": Monday
      register: ec2_info
+     tags:
+       - always
    - name: displaying output
      debug: msg="{{item.instance_id}}"
      with_items: "{{ec2_info.instances}}"s
