ec2 facts moduleadd tags

--- a/38-ansible_ec2_instance_facts.yaml
+++ b/38-ansible_ec2_instance_facts.yaml
@@ -14,12 +14,12 @@
        - always
    - name: displaying output
      debug: msg="{{item.instance_id}}"
-     with_items: "{{ec2_info.instances}}"s
+     with_items: "{{ec2_info.instances}}"
      tags:
        - always
-  # - name: displaying output
-  #   debug: msg="{{item.instance_id}}"
-  #   with_items: "{{ec2_info.instances}}"
+#   - name: displaying output
+#     debug: msg="{{item.instance_id}}"
+#     with_items: "{{ec2_info.instances}}"
    - name: starting ec2 instance
      ec2:
       instance_ids: "{{item.instance_id}}"
